<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mface.thu.edu.cn.mface.RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_register_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_newuser"
                android:textColor="@color/app_white"
                android:background="@drawable/touch_selector"
                android:onClick="btn_register_newuser" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_finduser"
                android:textColor="@color/app_white"
                android:background="@drawable/touch_selector"
                android:onClick="btn_register_finduser"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--opencv:camera_id="front"-->
            <mface.thu.edu.cn.mface.view.MFaceCameraView
                android:id="@+id/cv_register_camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                opencv:show_fps="true" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_middle" />

                <TextView
                    android:id="@+id/tv_register_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/thu_purple"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/register_hellouser" />

                <Button
                    android:id="@+id/btn_register_takepic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/app_white"
                    android:text="@string/register_takepicture"
                    android:background="@drawable/touch_selector"
                    android:onClick="btn_register_takepic" />


            </LinearLayout>


        </LinearLayout>


    </FrameLayout>

</RelativeLayout>


